Fix invalid data

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "validate-data": "node scripts/validate.js",
-    "upload": "node scripts/validate.js && node scripts/upload.js"
+    "upload": "git pull && node scripts/validate.js && node scripts/upload.js"
   },
   "repository": {
     "type": "git",
