--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ajv": "^6.2.1",
     "algoliasearch": "^3.27.0",
     "bluebird": "^3.5.1",
+    "country-data": "0.0.31",
     "github-api": "^3.0.0"
   }
 }
