Update N26 and Revolut markets

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "algoliasearch": "^3.27.0",
     "bluebird": "^3.5.1",
     "country-data": "0.0.31",
+    "emoji-flags": "^1.2.0",
     "github-api": "^3.0.0"
   }
 }
