Add Neuros description

--- a/data/neurosapp.json
+++ b/data/neurosapp.json
@@ -7,6 +7,7 @@
     "challenger"
   ],
   "name": "Neuros",
+  "description": "The first challenger bank for Autism, ADHD, Asperger, OCD and other cognitive challenges.",
   "legalName": null,
   "ipoStatus": "private",
   "stockSymbol": null,
