--- a/data/account-providers/frost-app.json
+++ b/data/account-providers/frost-app.json
@@ -12,8 +12,8 @@
   "ipoStatus": "private",
   "stockSymbol": null,
   "verified": false,
-  "status": "upcoming",
-  "icon": "https://res.cloudinary.com/apideck/image/upload/v1590279800/radar/icons/frost-app.png",
+  "status": "beta",
+  "icon": "https://res.cloudinary.com/apideck/image/upload/v1590286216/catalog/frost-app/icon128x128.png",
   "websiteUrl": "https://frost.app/",
   "ownership": [],
   "stateOwned": false,
@@ -32,24 +32,36 @@
   "openBankProjectUrl": null,
   "slackCommunity": false,
   "apiAuth": [],
+  "apiPerformanceReports": [],
+  "apiServerEndpoints": [],
+  "apiSpecs": [],
   "apiProducts": [],
   "apiStandards": [],
+  "apiStatusUrls": [],
   "apiAggregators": [],
   "collections": [],
   "webApplication": false,
   "mobileApps": [],
   "financialReports": [],
   "bloomberg": null,
+  "alumni": [],
   "stack": [],
   "thirdPartyBankingLicense": null,
   "debitCardLicense": null,
+  "creditCardLicense": null,
   "debitAccountLicense": null,
   "strategies": [],
   "prepaidCards": [],
+  "prepaidDebitCards": [],
   "debitCards": [],
   "creditCards": [],
   "virtualCards": [],
+  "applePay": false,
+  "googlePay": false,
+  "samsungPay": false,
+  "fitbitPay": false,
   "partnerships": [],
+  "rewardPartners": [],
   "integrations": [],
   "platforms": [],
   "awards": []
