Add Clydesdale Bank
Signed-off-by: Gertjan De Wilde <info@gertjandewilde.com>

--- a/data/account-providers/lydia-app.json
+++ b/data/account-providers/lydia-app.json
@@ -65,6 +65,12 @@
       "name": "Budget Insight",
       "icon": "https://res.cloudinary.com/apideck/image/upload/v1592565267/icons/budget-insight.jpg",
       "websiteUrl": "https://www.budget-insight.com/"
+    },
+    {
+      "id": "cashbee-fr",
+      "name": "Cashbee",
+      "icon": "https://res.cloudinary.com/apideck/image/upload/v1623450071/icons/cashbee-fr.jpg",
+      "websiteUrl": "https://www.cashbee.fr/"
     }
   ],
   "thirdPartyBankingLicense": null,
