Update Bridge coverage
Update Bridge coverage with new banks connected

--- a/data/account-providers/lydia-app.json
+++ b/data/account-providers/lydia-app.json
@@ -36,7 +36,9 @@
   "apiProducts": [],
   "apiStandards": [],
   "apiStatusUrls": [],
-  "apiAggregators": [],
+  "apiAggregators": [
+    "bridgeapi-io"
+  ],
   "collections": [],
   "webApplication": false,
   "mobileApps": [
