--- a/data/account-providers/bank-of-east-asia.json
+++ b/data/account-providers/bank-of-east-asia.json
@@ -1,5 +1,5 @@
 {
-  "id": "barclaycard",
+  "id": "bank-of-east-asia",
   "type": [
     "account"
   ],
@@ -7,28 +7,23 @@
     "private"
   ],
   "status": "live",
-  "name": "Barclaycard",
-  "icon": "https://d1uuj3mi6rzwpm.cloudfront.net/logos/providers/gb/barclaycard_commercial_payments_gb.svg",
+  "name": "Bank of East Asia",
+  "icon": "https://d1uuj3mi6rzwpm.cloudfront.net/logos/providers/gb/bank_of_ireland_gb.svg",
   "verified": false,
-  "websiteUrl": "https://www.barclays.de",
-  "countryHQ": "DE",
+  "websiteUrl": "https://priora.saltedge.com",
+  "countryHQ": "GB",
   "countries": [
-    "DE",
     "GB"
   ],
   "webApplication": false,
   "mobileApps": [],
   "compliance": [
     {
-      "regulation": "PSD2",
-      "status": "unknown"
-    },
-    {
       "regulation": "OB",
       "status": "unknown"
     }
   ],
-  "developerPortalUrl": "https://developer.barclays.com",
+  "developerPortalUrl": "https://priora.saltedge.com/docs",
   "apiStandards": [],
   "apiProducts": [],
   "ownership": [],
@@ -37,5 +32,5 @@
   "apiAggregators": [
     "salt-edge"
   ],
-  "swiftCode": "BARCDEHAXXX"
+  "swiftCode": "BEASGB2LXXX"
 }
