--- a/data/account-providers/cash-app.json
+++ b/data/account-providers/cash-app.json
@@ -75,7 +75,8 @@
   "rewardPartners": [],
   "integrations": [
     {
-      "id": "bitcoin-org",
+      "id": "simplex.com
+",
       "name": "Bitcoin",
       "icon": "https://res.cloudinary.com/apideck/image/upload/v1583231620/catalog/bitcoin-org/icon128x128.jpg",
       "websiteUrl": "https://bitcoin.org/"
