--- a/.github/workflows/validate-data.yml
+++ b/.github/workflows/validate-data.yml
@@ -123,6 +123,8 @@ jobs:
     steps:
       - name: ⬇️ Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v3
@@ -132,6 +134,9 @@ jobs:
       
       - name: 📥 Install dependencies
         run: npm ci
+      
+      - name: 🔍 Check for duplicate providers
+        run: npm run check-duplicates
       
       - name: 🔍 Validate account providers
         run: npm run validate-providers
