--- a/data/account-providers/bank-nxt.json
+++ b/data/account-providers/bank-nxt.json
@@ -26,5 +26,13 @@
   "apiAggregators": [],
   "ownership": [],
   "stateOwned": false,
-  "stockSymbol": null
+  "stockSymbol": null,
+  "stack": [
+    {
+      "id": "temenos",
+      "name": "Temenos",
+      "icon": "https://res.cloudinary.com/apideck/image/upload/v1614098937/icons/temenos.jpg",
+      "websiteUrl": "https://www.temenos.com/"
+    }
+  ]
 }
